fixes #2 upgrade to 0.1.12 which has performance issue